# trauma_databank

./: .gitignore  .mcp.json  GEMINI.md  README.md  pyproject.toml  tag_injury_types.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  yazi-theme.toml  zellij-config.kdl  zellij-layout.kdl
.devcontainer/hooks/: update-stats.sh
.devcontainer/scripts/: claude-model.sh  claude-tokens.sh  git-branch.sh  project-name.sh
archive/: extract_intro.py
archive/scripts/: ais_query.py  build_abdomen_json.py
docs/: ais_coding_flow.md  jtdb_schema.json  jtdb_schema.md
nanoclaw-skill/: README.md  package-lock.json  package.json
nanoclaw-skill/skill/: SKILL.md
nanoclaw-skill/src/: jtdb-agent.ts  jtdb-tool.ts  telegram-adapter.ts
output/data/: AIS_ISS_coding_guide.md
output/merged/: 05_abdomen.json  07_extremity.json  08_other.json  abdomen.json  extremity.json  face.json  head.json  neck.json  other.json  spine.json  thorax.json
output/patients/: 20260623_81f67a57.json  20260623_81f67a57.md  20260624_dummy_9c8b9e.json  20260624_dummy_9c8b9e.md  20260625_dummy_db375e.json  20260625_dummy_db375e.md  20260702_dummy_172d68.json  20260702_dummy_172d68.md  20260702_dummy_332272.json  20260702_dummy_332272.md  20260702_dummy_515a45.json  20260702_dummy_515a45.md  20260702_dummy_aa4a89.json  20260702_dummy_aa4a89.md  20260702_dummy_c329e1.json  20260702_dummy_c329e1.md  (+8 more)
scripts/: analyze_codebook.py  build_codebook_v2.py  convert.py  convert_renamed.py  fix_hierarchy.py  flatten_json.py  jp_lookup.json  jtdb_ais_coder.py  jtdb_collector.py  merge_results.py
(+311 files in other folders)
